--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,13 @@ dependencies {
     implementation("org.apache.commons:commons-lang3:$commons_lang3_version")
     implementation("org.apache.logging.log4j:log4j-api:${log4j2Version}")
     implementation("org.apache.logging.log4j:log4j-core:${log4j2Version}")
+	implementation('com.google.code.gson:gson:2.8.6')
 
-    testCompile("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+	implementation("com.squareup.retrofit2:retrofit:${retrofit_version}")
+	implementation("com.squareup.retrofit2:converter-gson:${retrofit_version}")
+
+
+	testCompile("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     testRuntime("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
 }
